# docflow

./: .env.example  .gitignore  Makefile  README.md  docker-compose.deploy.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.test  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_dom_slides_ai.py  0003_animation_autoplay.py  0004_library_analytics_comments.py  0005_internationalization.py  0006_user_administration.py  0007_organizations_audit_recycle.py  (+22 more)
backend/app/: ai_jobs.py  ai_models.py  ai_service.py  config.py  database.py  defaults.py  demo_cloning.py  dependencies.py  errors.py  exporters.py  http_cache.py  image_annotations.py  in_app_notifications.py  main.py  models.py  monitoring_schemas.py  platform_settings.py  platform_settings_schemas.py  quota.py  quota_analytics.py  quota_capabilities.py  quota_estimates.py  quota_policy.py  resource_transfer_schemas.py  resource_transfer_service.py  schemas.py  secrets.py  security.py  services.py  snapshots.py  storage.py  worker.py  workspace_schemas.py  workspace_service.py
backend/tests/: conftest.py  test_admin_jobs.py  test_ai_admin.py  test_ai_retries.py  test_api.py  test_dom_ai.py  test_exporters.py  test_extension_capture_settings.py  test_extension_releases.py  test_general_platform_settings.py  test_google_auth.py  test_i18n.py  test_image_annotations.py  test_in_app_notifications.py  test_library_analytics.py  test_migrations.py  test_monitoring.py  test_quotas.py  test_recording_sessions.py  test_resource_governance.py  test_resource_transfers.py  test_storage_admin.py  test_user_admin.py  test_workspace.py
(+243 files in other folders)
