[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "docflow-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "argon2-cffi>=23.1,<24",
  "celery[redis]>=5.4,<6",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "pillow>=10.4,<12",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8.3,<9", "pytest-cov>=5,<6"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
